--- a/charts/src/index.css
+++ b/charts/src/index.css
@@ -1,3 +1,10 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +17,54 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+*.graficos{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 1rem;
+}
+
+
+.main_container{
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  background-image: url(img/background.jpg);
+  background-size: cover;
+  border: solid;
+  border-color: red;
+ 
+}
+
+.gotlogo{
+  display: flex;
+  align-items: center;
+  width: 80vw;
+  height: 160px;
+  margin-top: 10px;
+  color: #ffffff;
+  border: solid;
+  border-color: red;
+}
+
+.gotlogo img{
+  max-width: 100%;
+  
+}
+
+.container_perguntas{
+  border: solid 3px rebeccapurple;
+  width: 100px;
+}
+
+footer{
+  display: flex;
+  width: 100vw;
+  height: 20vh;
+  background-color: black;
+  justify-content: center;
 }
