--- a/charts/src/index.css
+++ b/charts/src/index.css
@@ -18,47 +18,74 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-*.graficos{
+
+.graficos{
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
-  margin-top: 1rem;
+  margin-top: 2rem;
+  gap: 160px;
 }
 
+.graficos p{
+  font-size: 40px;
+}
 
 .main_container{
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100vw;
   height: 100vh;
-  justify-content: center;
   background-image: url(img/background.jpg);
   background-size: cover;
-  border: solid;
-  border-color: red;
- 
+  font-size: 1.5rem;
 }
 
-.gotlogo{
-  display: flex;
-  align-items: center;
-  width: 80vw;
-  height: 160px;
-  margin-top: 10px;
-  color: #ffffff;
-  border: solid;
-  border-color: red;
+.main_container img{
+  max-width: 90%;
 }
 
-.gotlogo img{
-  max-width: 100%;
-  
+.main_container h1 {
+  margin-top: 50px;
+  color: white;
+  margin-bottom: 30px;
+  font-size: 1.6em;
 }
 
 .container_perguntas{
-  border: solid 3px rebeccapurple;
-  width: 100px;
+  /* border: solid 3px rebeccapurple; */
+  width: 52vw;
+  height: 50vh;
+}
+
+.container_perguntas a{
+  text-decoration: none;
+  
+}
+
+.container_perguntas ul {
+  margin-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+  justify-content: center;
+  
+  /* flex-direction: column; */
+}
+
+.container_perguntas ul li{
+  font-size: 1.6rem;
+  list-style: none;
+  color: white;
+  background-color: rgb(47, 35, 207);
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.container_perguntas ul li :hover{
+  background-color: blueviolet;
 }
 
 footer{
