--- a/charts/src/index.css
+++ b/charts/src/index.css
@@ -36,7 +36,7 @@ code {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-image: url(img/background.jpg);
   background-size: cover;
@@ -90,7 +90,7 @@ code {
 
 footer{
   display: flex;
-  width: 100vw;
+  width: 100%;
   height: 20vh;
   background-color: black;
   justify-content: center;
