--- a/charts/src/index.css
+++ b/charts/src/index.css
@@ -5,20 +5,6 @@
   
 }
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 .graficos{
   display: flex;
   flex-wrap: wrap;
@@ -36,7 +22,7 @@ code {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-image: url(img/background.jpg);
   background-size: cover;
@@ -88,9 +74,18 @@ code {
   background-color: blueviolet;
 }
 
+#grafico1, #grafico2, #grafico3, #grafico4, #grafico5, #grafico6, #grafico7, #grafico8{
+  width: 80%;
+  margin: 0 auto;
+}
+
+.general_rules{
+  width: 100%;
+}
+
 footer{
   display: flex;
-  width: 100vw;
+  width: 100%;
   height: 20vh;
   background-color: black;
   justify-content: center;
